# SOFTX-D-22-00404

./: CMakeLists.txt  Jamroot  README.md
examples/: CMakeLists.txt  Jamfile  example1.cpp  io.h  load.cpp  load.py  python_io.py  run  save.cpp  save.py
include/: cnpy++.hpp
include/cnpy++/: buffer.hpp
src/: buffer.cpp  cnpy++.cpp
